# migration_repo_template

./: .gitignore  .pre-commit-config.yaml  README.md  create_folder_structure.py  pyproject.toml  remove_copilot_coauthor.sh  requirements.txt  rewrite_history_strip_notebooks.sh  setup_pre_commit.sh
.github/workflows/: create_pdfs.yaml
data_preparation/: call_the_api.ipynb
iterations/first/reports/: report_post_csv_items.md  report_post_holdingsrecords_from_mfhd.md  report_post_instances.md  report_post_srs_bibs.md  report_post_users.md  report_transform_bibs.md  report_transform_csv_items.md  report_transform_mfhd.md  report_users_transform.md
mapping_files/: exampleConfiguration.json
