[project]
name = "migration-repo-template"
version = "0.1.0"
description = "Template project for FOLIO migrations using FOLIO-FSE/folio_migration_tools"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dotenv>=0.9.9",
    "folio-data-import>=0.3.2,<0.5.0",
    "folio-migration-tools>=1.9.6,<2.0.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.2,<3.0.0",
    "polars>=1.33.0,<2.0.0",
]

[tool.poetry]
package-mode = false
